tests/paczka1/fuzzy1/82531433.err
Error in line 3: myPkK S124 69,2
Error in line 5: myPkK S477 95,5
Error in line 14: BsTXM S124 64,1
Error in line 19: 2Pt A494 14,9
Error in line 20: 2Pt S124 45,8
Error in line 13: myPkK A874 64,8
Error in line 29: 6JPX9LSYJi S124 37,1
